--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ABC123XYZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Пожалуйста, подождите...</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ABC123XYZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+  
+    gtag('js', new Date());
+    gtag('config', 'G-ABC123XYZ');
 
-  gtag('js', new Date());
-  gtag('config', 'G-ABC123XYZ');
+    function getUTMParams() {
+      const params = new URLSearchParams(window.location.search);
+      let utmData = {};
+      params.forEach((value, key) => {
+        if (key.startsWith("utm_")) {
+          utmData[key] = value;
+        }
+      });
+      return utmData;
+    }
 
-  function getUTMParams() {
-    const params = new URLSearchParams(window.location.search);
-    let utmData = {};
-    params.forEach((value, key) => {
-      if (key.startsWith("utm_")) {
-        utmData[key] = value;
-      }
-    });
-    return utmData;
-  }
-
-  const utmData = getUTMParams();
-  if (Object.keys(utmData).length > 0) {
-    gtag('event', 'utm_capture', utmData);
-  }
-</script>
+    const utmData = getUTMParams();
+    if (Object.keys(utmData).length > 0) {
+      gtag('event', 'utm_capture', utmData);
+    }
+  </script>
+  <meta http-equiv="refresh" content="3; url=https://wa.me/77472936155">
+</head>
+<body>
+  <h1>Пожалуйста, подождите...</h1>
+  <p>Мы перенаправляем вас в WhatsApp...</p>
+</body>
+</html>
